@@ -1,8 +1,9 @@
-.subtitle= subtitle :contact, "Contact Information"
+- collapsed = (@account.errors.empty? && session[:contact_accounts_new].nil?)
+= subtitle :contact, collapsed, "Contact Information"
 .section
-  #contact_intro{ hidden_if(!@account.errors.empty?) }
-    %small You can add lead contact information later.
-  #contact{ hidden_if(@account.errors.empty?) }
+  %small#contact_intro{ hidden_if(!collapsed) }
+    You can add lead contact information later.
+  #contact{ hidden_if(collapsed) }
     %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
       %tr
         %td{ :valign => :top }
