@@ -1,8 +1,9 @@
-.subtitle= subtitle :permissions
+- collapsed = (@campaign.errors.empty? && session[:permissions_campaigns_new].nil?)
+= subtitle :permissions, collapsed
 .section
-  #permissions_intro{ hidden_if(!@campaign.errors.empty?) }
-    %small By default only you will have access to the campaign and its leads. You can change permissions later.
-  #permissions{ hidden_if(@campaign.errors.empty?) }
+  %small#permissions_intro{ hidden_if(!collapsed) }
+    By default only you will have access to the campaign and its leads. You can change permissions later.
+  #permissions{ hidden_if(collapsed) }
     .radio_box
       = radio_button_tag "campaign[access]", "Private", @campaign.access == "Private", :onclick => "$('people').hide()"
       Keep it private, do not share with others
